--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="navbar">
         <div class="container">
             <a href="#">Remember<span>That</span></a>
-            <img src="svg/menu.svg" alt="Open Navigation">
+            <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="menu">
 
             <nav>
+                <img id="mobile-exit" class="mobile-menu" src="images/exit.svg" alt="exit">
                 <ul class="primary-nav">
                     <li class="current"><a href="#">Home</a></li>
                     <li><a href="#">Features</a></li>
@@ -28,5 +29,91 @@
             </nav>
         </div>
     </div>
+
+    <!--hero section-->
+    <section class="hero">
+        <div class="container">
+            <div class="left-col">
+                <p class="subhead">It is Nitty &amp; Gritty</p>
+                <h1>A Task App That Doesn't Stink</h1>
+
+                <div class="hero-octa">
+                    <a href="" class="primary-cta">Try For Free</a>
+                    <a href="" class="watch-video-cta">
+                        <img src="images/watch.svg" alt="Watch A Video" >
+                        Watch A Video
+                    </a>
+                </div>
+
+            </div>
+
+            <div class="right-col">
+                 <img src="images/illustration.svg" alt="illustration" class="hero-img">
+            </div>
+        </div>
+    </section>
+
+    <!--features-->
+    <section class="features-section">
+        <div class="container">
+            <ul class="features-list">
+                <li>Unlimited Tasks</li>
+                <li>SMS Task Reminders</li>
+                <li>Confetti Explosions upon Task Completions</li>
+                <li>Social Media Announcements</li>
+                <li>Real Time Collaboration</li>
+                <li>Other awesome features</li>
+            </ul>
+
+            <img src="images/holding-phone.jpg" alt="Man holding phone" class="man">
+        </div>
+    </section>
+
+    <!--testimonials-->
+    <section class="testimonials">
+        <div class="container">
+            <ul>
+                <li>
+                    <img src="images/person.jpg" alt="Person">
+                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <cite>- Jane Doe</cite>
+                </li>
+                <li>
+                    <img src="images/person.jpg" alt="Person">
+                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <cite>- Jane Doe</cite>
+                </li>
+                <li>
+                    <img src="images/person.jpg" alt="Person">
+                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <cite>- Jane Doe</cite>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!--contact-->
+    <section class="contact-section">
+        <div class="container">
+            <div class="contact-left">
+                <h2>Contact Form</h2>
+
+                <form action="">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name">
+
+                    <label for="message" name="message">Message</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+
+                    <input type="submit" class="send-message-cta" value="Submt Mesage">
+                </form>
+            </div>
+
+            <div class="contact-right">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.615777378255!2d3.456577650512078!3d6.443355995315527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf4ff386e7135%3A0x8f96e0ede128c65e!2sWole%20Ariyo%20St%2C%20Lekki%20Phase%20I%20106104%2C%20Lekki!5e0!3m2!1sen!2sng!4v1668944037684!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
