--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <div class="navbar">
         <div class="container">
-            <a href="#">Remember<span>That</span></a>
+            <a class="logo" href="#">Remember<span>That</span></a>
             <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="menu">
 
             <nav>
