--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- navbar section -->
+    <!-- navbar -->
     <div class="navbar">
         <div class="container">
             <a class="logo" href="#">Remember<span>That</span></a>
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <!--hero section-->
+    <!-- hero -->
     <section class="hero">
         <div class="container">
             <div class="left-col">
@@ -44,7 +44,6 @@
                         Watch A Video
                     </a>
                 </div>
-
             </div>
 
             <div class="right-col">
@@ -53,7 +52,7 @@
         </div>
     </section>
 
-    <!--features-->
+    <!-- features -->
     <section class="features-section">
         <div class="container">
             <ul class="features-list">
@@ -69,7 +68,7 @@
         </div>
     </section>
 
-    <!--testimonials-->
+    <!-- testimonials -->
     <section class="testimonials">
         <div class="container">
             <ul>
@@ -92,7 +91,7 @@
         </div>
     </section>
 
-    <!--contact-->
+    <!-- contact -->
     <section class="contact-section">
         <div class="container">
             <div class="contact-left">
@@ -114,6 +113,5 @@
             </div>
         </div>
     </section>
-
 </body>
 </html>
